prod/bemily-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bemily
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-04067c20335db3c08, subnet-07b537a70166009da
    alb.ingress.kubernetes.io/tags: Name=prod-bemily-alb, role=api, service=alb
    alb.ingress.kubernetes.io/security-groups: sg-04b419e647c398a76
    alb.ingress.kubernetes.io/ingress-name: prod-bemily-proxy-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":8080},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /hello
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:193033533370:certificate/06b3e092-478b-4901-a279-59b4b141ef71
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
  rules:
    - http:
        paths:
          - path: /sd/v1/msg/*
            backend:
              serviceName: prod-bemily-sd
              servicePort: 8080
          - path: /sd/cas/hello
            backend:
              serviceName: prod-bemily-sd
              servicePort: 8080
          - path: /file/manage/*
            backend:
              serviceName: prod-bemily-file
              servicePort: 38080
          - path: /auth/*
            backend:
              serviceName: prod-bemily-auth
              servicePort: 38081
          - path: /api/account/*
            backend:
              serviceName: prod-bemily-api
              servicePort: 7000
          - path: /api/friends/*
            backend:
              serviceName: prod-bemily-api
              servicePort: 7000
          - path: /api/group/*
            backend:
              serviceName: prod-bemily-api
              servicePort: 7000
          - path: /api/chat/*
            backend:
              serviceName: prod-bemily-api
              servicePort: 7000
          - path: /api/profile/*
            backend:
              serviceName: prod-bemily-api
              servicePort: 7000
          - path: /noti/v1/msg/*
            backend:
              serviceName: prod-bemily-noti
              servicePort: 8080
